--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -31,13 +31,12 @@
         <div class="header-content">
             <ul>
                 
-                <li class="title-page"><a href="{% url 'home' %}">Trang chủ</a></li>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
                 <li><a href="{% url 'login' %}">Đăng nhập</a></li>
                 <li><a href="{% url 'signup' %}">Đăng ký</a></li>
-                <li><a href="{% url 'text_to_speech' %}">voice</a></li>
+                <!-- <li><a href="{% url 'text_to_speech' %}">voice</a></li> -->
 {% comment %} 
                 <ul>
                     {% for entry in entries %}
@@ -69,7 +68,7 @@
         
     </header>
     <!-- end header -->
-     
+
     <!-- section-1 -->
     <div class="container container-one">
         <div class="main-content">
@@ -77,6 +76,13 @@
                 <h1 class="title">
                     Khám phá
                 </h1>
+                <!-- {% for book in books %}
+                <li>
+                    <a href="{% url 'book_detail' book.id %}">{{ book.title }}</a>
+                </li>
+                {% empty %}
+                    <li>Không có sách nào.</li>
+                {% endfor %} -->
                 <div class="discover-list">
                     <a href="#">
                         <div class="discover-item">
@@ -196,14 +202,7 @@
             </div>
             <div class="content-sidebar">
                 <p>
-                    Lấy bối cảnh trước ngày thống nhất đất nước năm 1975, câu chuyện xoay quanh Chương, chàng trai 18 tuổi đầy ước mơ và hoài bão, rời vùng quê nghèo miền Trung nắng gió vào Sài Gòn để kiếm cho mình tấm bằng đại học sư phạm.
-                </p>
-                <p>
-                    Nơi đất khách ồn ào náo nhiệt, anh gặp gỡ những con người mới. Có những người chỉ đi qua cuộc đời anh, nhưng cũng có những người gắn bó với anh cả trọn cuộc đời. Đó là những người bạn đại học thân thiết Kim Dung và Bảo. Đó là gia đình bác Tám với ba cô con gái: Kim, Trâm, Quỳnh và cậu em út Tạo. Kim, cô chị cả của gia đình nhỏ; Trâm lanh lẹ, "ác khẩu" nhưng lại tốt bụng; và đặc biệt một Quỳnh đáng yêu xinh xắn, dịu dàng, khiến Chương xao xuyến ngay từ lần đầu nghe giọng. Nhưng rồi chiến tranh và dòng đời xô đẩy mỗi người một phương. Và rồi tất cả chẳng còn "chút gì để nhớ"...
-                </p>
-                <p>
-                    Bốn năm, một khoảng thời gian không dài nhưng chất chứa biết bao kỷ niệm, ký ức của cả một quãng đời tuổi đôi mươi của Chương. Những tình bạn đẹp, những mối tình ngây ngô, vụng dại và lỡ làng. Sài Gòn chỉ đủ níu kéo chân Chương bốn năm của quãng đời đại học, nhưng những kỷ niệm nơi mảnh đất ấy đủ níu kéo những hoài niệm trong anh cả một đời...
-
+              
                 </p>
                     
             </div>
@@ -223,15 +222,16 @@
     <div class="container container-two">
         <h1 class="for-you-title">Dành cho bạn</h1>
         <div class="audiobook-list">
+            {%for book in books %}
             <div class="audiobook audiobook-item">
-                <a href="#">
+                <a href="{% url 'book_detail' book.id %}">
                     <div class="main for-you-main">
                         <div class="book-image">
-                            <img src="{% static 'assets/images/sach-1521858607292758740290.webp' %}" alt="Sach" class="image">
+                            <img src="{{book.cover_image}}" alt="Sach" class="image">
                         </div>
                         <div class="book-information">
-                            <h2 class="book-title">Tuổi trẻ đáng giá bao nhiêu</h2>
-                            <h3 class="author">Rosie Nguyễn</h3>
+                            <h2 class="book-title">{{book.title}}</h2>
+                            <h3 class="author">{{book.author.name}}</h3>
                         </div>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
@@ -246,169 +246,8 @@
                     </div>
                 </div>
             </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/nha-gia-kim-01.jpg' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Nhà giả kim</h2>
-                            <h3 class="author">Paulo Coelho</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time">
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/tren-dinh-pho-wall-outline-1-2-2018-02.webp' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Trên đỉnh phố Wall</h2>
-                            <h3 class="author">Peter Lynch</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time">
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{%static 'assets/images/dai_viet_su_ki_toan_thu.jpg' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Đại Việt sử kí toàn thư</h2>
-                            <h3 class="author">Nhiều tác giả</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time"> 
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="audiobook-list">
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/sach-1521858607292758740290.webp ' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Tuổi trẻ đáng giá bao nhiêu</h2>
-                            <h3 class="author">Rosie Nguyễn</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time">
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/nha-gia-kim-01.jpg' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Nhà giả kim</h2>
-                            <h3 class="author">Paulo Coelho</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time">
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/tren-dinh-pho-wall-outline-1-2-2018-02.webp' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Trên đỉnh phố Wall</h2>
-                            <h3 class="author">Peter Lynch</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time">
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="audiobook audiobook-item">
-                <a href="#">
-                    <div class="main for-you-main">
-                        <div class="book-image">
-                            <img src="{% static 'assets/images/dai_viet_su_ki_toan_thu.jpg' %}" alt="Sach" class="image">
-                        </div>
-                        <div class="book-information">
-                            <h2 class="book-title">Đại Việt sử kí toàn thư</h2>
-                            <h3 class="author">Nhiều tác giả</h3>
-                        </div>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </a>
-                <div class="sidebar for-you-sidebar">
-                    <div class="book-time"> 
-                        <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
-                    </div>
-                    <div class="icon">
-                        <i class="fa-solid fa-circle-play"></i>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
+           
         </div>
     </div>
     <script>
