update sort author

--- a/sachnoi/templates/app/author.html
+++ b/sachnoi/templates/app/author.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/styles_author.css' %}"/>
+    <script src="{% static 'assets/js/author.js' %}" defer></script>
+
 </head>
 <body>
     <!-- header -->
@@ -81,6 +83,7 @@
         <div class="title">
             <h1>Lê Tất Điều</h1>
             <a href="#">
+                <h2>sắp xếp </h2>
                 <h3>Xem thêm</h3>
             </a>
         </div>
@@ -186,6 +189,7 @@
         <div class="title">
             <h1>Tony Buổi Sáng</h1>
             <a href="#">
+                <h2>sắp xếp </h2>
                 <h3>Xem thêm</h3>
             </a>
         </div>
@@ -291,6 +295,7 @@
         <div class="title">
             <h1>Isaac Asimov</h1>
             <a href="#">
+                <h2>sắp xếp </h2>
                 <h3>Xem thêm</h3>
             </a>
         </div>
@@ -396,6 +401,7 @@
         <div class="title">
             <h1>Albert Camus</h1>
             <a href="#">
+                <h2>sắp xếp </h2>
                 <h3>Xem thêm</h3>
             </a>
         </div>
