--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -30,12 +30,17 @@
 
         <div class="header-content">
             <ul>
-                
+                <div class ="form-inline my-2 my-lg-0">
+                    <span>hello! {{request.user}}</span>
+                    {% comment %} <span><a href="{% url 'logout' %}">Đăng xuất</a></span> {% endcomment %}
+                </div>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
                 <li><a href="{% url 'login' %}">Đăng nhập</a></li>
                 <li><a href="{% url 'signup' %}">Đăng ký</a></li>
+                {% comment %} <li><a href="{% url 'text_to_speech' %}">voice</a></li> {% endcomment %}
+
    
 {% comment %} 
                 <ul>
@@ -45,11 +50,7 @@
                         </li>
                     {% endfor %}
                 </ul> {% endcomment %}
-                <div class ="form-inline my-2 my-lg-0">
-                    <span>hello! {{request.user}}</span>
-                    <span><a href="{% url 'logout' %}">Đăng xuất</a></span>
-
-                </div>
+                
                 
             </ul>
         </div>
@@ -63,6 +64,7 @@
                 <li><a href="/profile/">Thông tin người dùng</a></li>
                 <li><a href="/favorites/">Danh sách yêu thích</a></li>
                 <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
+
             </ul>
         </div>
         
@@ -269,5 +271,9 @@
         });
     </script>
     
+
+    
+   
+
 </body>
 </html>
