--- a/sachnoi/templates/app/login.html
+++ b/sachnoi/templates/app/login.html
@@ -18,7 +18,7 @@
         <div class="header-content">
             <ul>
                 
-                <li class="title-page"><a href="{% url 'home' %}">Trang chủ</a></li>
+                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
