--- a/sachnoi/templates/app/text_to_speech.html
+++ b/sachnoi/templates/app/text_to_speech.html
@@ -28,23 +28,41 @@
         <div class="header-content">
             <ul>
                 
-                <li class="title-page"><a href="{% url 'home' %}">Trang chủ</a></li>
+                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
                 <li><a href="{% url 'login' %}">Đăng nhập</a></li>
                 <li><a href="{% url 'signup' %}">Đăng ký</a></li>
             </ul>
-        <div class="personal-account">
+        {% comment %} <div class="personal-account">
             <img src="{% static 'assets/images/Flag_of_Vietnam.svg.webp' %}" alt="personal image" class="image">
-        </div>
+        </div> {% endcomment %}
     </header>
     <h1>Chuyển Văn Bản Thành Giọng Nói</h1>
     <form method="post">
         {% csrf_token %}
+        <textarea name="text" rows="5" cols="40" placeholder="Nhập văn bản tại đây..."></textarea><br>
+        <button type="submit">Phát âm thanh</button>
+      </form>
+      
+      {% if audio_url %}
+        <audio controls>
+          <source src="{{ audio_url }}" type="audio/mpeg">
+          Trình duyệt của bạn không hỗ trợ phát âm thanh.
+        </audio>
+      {% endif %}
+      
+      {% if error %}
+        <p style="color: red;">{{ error }}</p>
+      {% endif %}
+        {% comment %} {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" name="action" value="play">Phát trực tiếp</button>
-        <button type="submit" name="action" value="download">Tải về</button>
+        <button type="submit" name="action" value="download">Tải về</button> {% endcomment %}
     </form>
+    
+        
+      
 </body>
 </html>
