--- a/sachnoi/static/assets/css/styles_category.css
+++ b/sachnoi/static/assets/css/styles_category.css
@@ -78,3 +78,15 @@
     color: white; /* Change text color on hover */
     border-radius: 5px; /* Rounded corners */
 }
+html{
+    scroll-behavior: smooth;
+}
+.audiobook-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+}
+.audiobook-item{
+    margin-top: 20px;
+    margin-left: 30px;
+}
