--- a/sachnoi/templates/app/category.html
+++ b/sachnoi/templates/app/category.html
@@ -23,7 +23,7 @@
         <div class="header-content">
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="index">
                         Trang chủ
                     </a>
                 </li>
