--- a/sachnoi/templates/app/author.html
+++ b/sachnoi/templates/app/author.html
@@ -27,7 +27,7 @@
         <div class="header-content">
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="{% url 'index' %}">
                         Trang chủ
                     </a>
                 </li>
