--- a/sachnoi/templates/app/category.html
+++ b/sachnoi/templates/app/category.html
@@ -23,22 +23,22 @@
         <div class="header-content">
             <ul>
                 <li>
-                    <a href="index">
+                    <a href="{% url 'index' %}">
                         Trang chủ
                     </a>
                 </li>
                 <li>
-                    <a href="discover.html">
+                    <a href="{% url 'discover' %}">
                         Khám phá
                     </a>
                 </li>
                 <li>
-                    <a href="author.html">
+                    <a href="{% url 'author' %}">
                         Tác giả
                     </a>
                 </li>
                 <li class="title-page">
-                    <a href="category.html">
+                    <a href="{% url 'category' %}">
                         Thể loại
                     </a>
                 </li>
