--- a/sachnoi/templates/app/detail.html
+++ b/sachnoi/templates/app/detail.html
@@ -23,7 +23,7 @@
         <div class="header-content">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="{% url 'index' %}">
                         Trang chủ
                     </a>
                 </li>
