--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -84,40 +84,40 @@
                     <li>Không có sách nào.</li>
                 {% endfor %} -->
                 <div class="discover-list">
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#tai_chinh">
                         <div class="discover-item">
                             <i class="fa-solid fa-coins"></i>
                             <h3 class="items-text">Tài chính</h3>
                         </div>
                     </a>
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#phat_trien">
                         <div class="discover-item">
                             <i class="fa-solid fa-user-tie"></i>
-                            <h3 class="items-text">Kinh doanh</h3>
+                            <h3 class="items-text">Phát triển</h3>
                         </div>
                     </a>
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#suc_khoe">
                         <div class="discover-item">
                             <i class="fa-solid fa-notes-medical"></i>
                             <h3 class="items-text">Sức khỏe</h3>
                         </div>
                     </a>
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#xa_hoi">
                         <div class="discover-item">
                             <i class="fa-solid fa-user-group"></i>
                             <h3 class="items-text">Xã hội</h3>
                         </div>
                     </a>
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#tam_sinh_ly">
                         <div class="discover-item">
                             <i class="fa-regular fa-face-laugh-wink"></i>
                             <h3 class="items-text">Tâm sinh lý</h3>
                         </div>
                     </a>
-                    <a href="{% url 'category' %}">
+                    <a href="{% url 'category' %}#tu_duy">
                         <div class="discover-item">
                             <i class="fa-regular fa-lightbulb"></i>
-                            <h3 class="items-text">Sáng tạo</h3>
+                            <h3 class="items-text">Tư duy</h3>
                         </div>
                     </a>
                 </div>
