--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -180,42 +180,7 @@
             </div>
         </div>
         <div class="main-sidebar">
-            <div class="head-sidebar">
-                <div class="image-author">
-                    <img src="{% static 'assets/images/Nguyen-Nhat-Anh-vanvn.jpg' %}" alt="Tác giả Nguyễn Nhật Ánh" class="image">
-                </div>
-                <div class="head-information">
-                    <h1 class="book-name">
-                        Còn chút gì để nhớ
-                    </h1>
-                    <h3 class="author">
-                        Nguyễn Nhật Ánh
-                    </h3>
-                </div>
-                <div class="icon"> 
-                    <input type="checkbox" id="bookmark-toggle">
-                    <label for="bookmark-toggle" class="bookmark-btn">
-                        <i class="fa-regular fa-bookmark  bookmark-off"></i>
-                        <i class="fa-solid fa-bookmark bookmark-on"></i>
-                    </label>
-                </div>
-            </div>
-            <div class="content-sidebar">
-                <p>
-              
-                </p>
-                    
-            </div>
-            <div class="progress-bar"></div>
-            <div class="play-pause">
-                <i class="fa-solid fa-backward-step"></i>
-                <input type="checkbox" id="play-pause-toggle">
-                <label for="play-pause-toggle" class="play-pause-btn">
-                    <i class="fa-solid fa-circle-play play-item"></i>
-                    <i class="fa-solid fa-circle-pause pause-item"></i>
-                </label>
-                <i class="fa-solid fa-forward-step"></i>
-            </div>
+            <img src="{% static 'assets/images/1.webp' %}" alt="">
         </div>
     </div>
 
