--- a/sachnoi/static/assets/css/styles.css
+++ b/sachnoi/static/assets/css/styles.css
@@ -345,6 +345,11 @@
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+.container .main-sidebar img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
 
 .container .main-sidebar .head-sidebar {
     width: 90%;
