--- a/sachnoi/static/assets/css/styles_detail.css
+++ b/sachnoi/static/assets/css/styles_detail.css
@@ -273,6 +273,7 @@
 
 .container-one .description-box .main-content {
     margin-bottom: 40px;
+    margin-right: 50px;
     
 }
 .container-one .description-box .main-content h1 {
