--- a/sachnoi/templates/app/forgot_password.html
+++ b/sachnoi/templates/app/forgot_password.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <div class="box">
-            <form action="#" method="post">
+            <form action="" method="post">
+                {% csrf_token %}
                 <h1 class="title">Quên mật khẩu</h1>
                 <h3>Vui lòng nhập email để tiếp tục</h3>
                 <input type="email" id="email" placeholder="Email của bạn">
