--- a/sachnoi/templates/app/login.html
+++ b/sachnoi/templates/app/login.html
@@ -28,14 +28,22 @@
 
     </header>
     
-
+    {% if messages %}
+        <div class="alert-container">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <div class="container">
         <div class="box">
             <form action="" method="POST">
                 {% csrf_token %}
                 <h1 class="title">Đăng nhập</h1>
                 <input type="text" name="username" id="name-user" placeholder="Tên đăng nhập">
-                <input type="password" name="password1" id="password" placeholder="Mật khẩu">
+                <input type="password" name="password" id="password" placeholder="Mật khẩu">
                 <a href="{% url 'forgot_password' %}" class="forgot-password">Quên mật khẩu?</a>
                 <input type="submit" value="Đăng nhập" class="login-box">
                 <div>
