--- a/sachnoi/templates/app/forgot_password.html
+++ b/sachnoi/templates/app/forgot_password.html
@@ -1,21 +1,31 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quên mật khẩu</title>
     <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/styles_forgot_password.css' %}" />
 </head>
 <body>
+    <header class="header">
+        
+        <div class="header-content">
+            <ul>
+                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
+            </ul>
+        </div>
+
+    </header>
     <div class="container">
         <div class="box">
             <form action="" method="post">
                 {% csrf_token %}
                 <h1 class="title">Quên mật khẩu</h1>
                 <h3>Vui lòng nhập email để tiếp tục</h3>
-                <input type="email" id="email" placeholder="Email của bạn">
+                <input type="email" name="email" placeholder="Email của bạn" required>
                 <input type="submit" value="Tiếp tục" class="continue">
             </form>
         </div>
